samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>