samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_Date__c</fullName>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>