samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <label>Bathrooms</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>