samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>