samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>In-unit Laundry</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Hardwood floors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>