samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>