samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Hero_Image__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image__c</fullName>
    <label>Main Image</label>
    <type>Url</type>
</CustomField>