samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/HOA_Fee__c.field-meta.xml
<CustomField>
    <fullName>HOA_Fee__c</fullName>
    <label>HOA Fee (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>