samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <label>Lease Term (mo)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>