samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces__c</fullName>
    <label>Parking Spaces</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>