samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Pet_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Pet_Friendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pet Friendly</label>
    <type>Checkbox</type>
</CustomField>