samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Property_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Company__c</fullName>
    <label>Property Management Company</label>
    <referenceTo>Property_Management_Company__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>