samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>