samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>For Sale</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Under Contract</fullName>
            </value>
            <value>
                <fullName>Off Market</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>