samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Property_Tax_Annual__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax_Annual__c</fullName>
    <label>Property Tax (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>