samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>