samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>