samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Tour_URL__c.field-meta.xml
<CustomField>
    <fullName>Tour_URL__c</fullName>
    <label>Virtual Tour URL</label>
    <type>Url</type>
</CustomField>