samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/fields/Utilities_Included__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Included__c</fullName>
    <label>Utilities Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Cable TV</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>