samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Property__c/validationRules/Property_Value_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Value_Range</fullName>
    <active>true</active>
    <description>Ensure property value is within reasonable range</description>
    <errorConditionFormula
  >OR(Property_Value__c &lt;= 0, Property_Value__c &gt; 50000000)</errorConditionFormula>
    <errorDisplayField>Property_Value__c</errorDisplayField>
    <errorMessage
  >Property Value must be between $1 and $50,000,000</errorMessage>
</ValidationRule>